<?php

declare(strict_types=1);

namespace Storm\Projector\Workflow\Notification;

use Storm\Projector\Workflow\NotifyOnce;

final class ResetOnlyOnceEmittedEvent implements NotifyOnce {}
